# GoC-Planner

./: .gitignore  Cargo.toml  PLAN.md  README.md  app.py  events.json  ladder.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
bindings/python/: .gitignore  Cargo.toml  pyproject.toml
bindings/python/goc_python/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
core/: Cargo.toml  config.py  engine.py  events.py  stats.py  utils.py
core/src/: ladder.rs  lib.rs  planner.rs  stats.rs
core/src/games/: mod.rs
core/src/games/coin/: head_count.rs  longest_streak.rs  mod.rs
core/testdata/: ladder_golden.json  planner_golden.json
generators/: __init__.py  base.py  coin.py
static/: worker.js
templates/: index.html
