[project]
name = "goc-planner"
version = "0.1.0"
description = "Event Optimizer — probability optimization tool for game event triggering"
requires-python = ">=3.12"
dependencies = ["flask>=3.0"]

[project.scripts]
goc-planner = "main:main"

[dependency-groups]
dev = ["pyright>=1.1.411", "pytest>=9.1.1", "ruff>=0.15.20"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "generators"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["app.py", "main.py", "core", "generators"]
exclude = [".venv", ".ruff_cache", "**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportUnusedImport = "warning"
