[package]
name = "goc-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "goc_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
goc-core = { path = "../../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
num-traits = "0.2"
